Double border fix

--- a/packages/react/src/components/header/components/headerActionBar/HeaderActionBarNavigationMenu.module.scss
+++ b/packages/react/src/components/header/components/headerActionBar/HeaderActionBarNavigationMenu.module.scss
@@ -14,6 +14,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: -1px;
 }
 
 .headerNavigationMenuLinkWrapper {
